--- a/package.json
+++ b/package.json
@@ -4,28 +4,46 @@
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
+    "storybook": "nx run common-components:storybook",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
+    "autoprefixer": "^10.4.7",
     "core-js": "^3.6.5",
+    "express": "4.17.2",
+    "postcss": "^8.4.14",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "regenerator-runtime": "0.13.7",
+    "tailwindcss": "^3.0.24",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
     "@nrwl/cli": "14.1.9",
     "@nrwl/cypress": "14.1.9",
     "@nrwl/eslint-plugin-nx": "14.1.9",
+    "@nrwl/express": "^14.1.9",
     "@nrwl/jest": "14.1.9",
     "@nrwl/linter": "14.1.9",
+    "@nrwl/node": "14.1.9",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "14.1.9",
+    "@nrwl/storybook": "^14.1.9",
     "@nrwl/web": "14.1.9",
     "@nrwl/workspace": "14.1.9",
+    "@storybook/addon-essentials": "~6.4.12",
+    "@storybook/builder-webpack5": "~6.4.12",
+    "@storybook/core-server": "~6.4.12",
+    "@storybook/manager-webpack5": "~6.4.12",
+    "@storybook/react": "~6.4.12",
+    "@svgr/webpack": "^5.4.0",
     "@testing-library/react": "13.1.1",
+    "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.8",
@@ -33,6 +51,7 @@
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
     "babel-jest": "27.5.1",
+    "babel-loader": "8.1.0",
     "cypress": "^9.1.0",
     "eslint": "~8.12.0",
     "eslint-config-prettier": "8.1.0",
@@ -47,6 +66,8 @@
     "react-test-renderer": "18.1.0",
     "ts-jest": "27.1.4",
     "ts-node": "9.1.1",
-    "typescript": "~4.6.2"
+    "typescript": "~4.6.2",
+    "url-loader": "^3.0.0",
+    "husky": "^8.0.0"
   }
 }
