--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "^10.4.7",
+    "classnames": "^2.3.1",
     "core-js": "^3.6.5",
     "express": "4.17.2",
     "postcss": "^8.4.14",
@@ -60,6 +61,7 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.5.0",
+    "husky": "^8.0.0",
     "jest": "27.5.1",
     "nx": "14.1.9",
     "prettier": "^2.5.1",
@@ -67,7 +69,6 @@
     "ts-jest": "27.1.4",
     "ts-node": "9.1.1",
     "typescript": "~4.6.2",
-    "url-loader": "^3.0.0",
-    "husky": "^8.0.0"
+    "url-loader": "^3.0.0"
   }
 }
