--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.6.3",
     "autoprefixer": "^10.4.7",
     "classnames": "^2.3.1",
     "core-js": "^3.6.5",
     "express": "4.17.2",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.14",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -48,6 +50,7 @@
     "@testing-library/react": "13.1.1",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "16.11.7",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
