--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "fontello:install": "npx fontello-cli --config ./fontello.config.json --css ./apps/client/src/fontello/css --font ./apps/client/src/fontello/font install",
+    "fontello:open": "npx fontello-cli --config ./fontello.config.json open",
     "start": "nx serve",
     "storybook": "nx run common-components:storybook",
     "build": "nx build",
@@ -74,6 +76,7 @@
     "ts-jest": "27.1.4",
     "ts-node": "9.1.1",
     "typescript": "~4.6.2",
-    "url-loader": "^3.0.0"
+    "url-loader": "^3.0.0",
+    "webpack-bundle-analyzer": "^4.5.0"
   }
 }
