--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "classnames": "^2.3.1",
     "core-js": "^3.6.5",
     "express": "4.17.2",
+    "i18next": "^21.8.4",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.1",
     "lodash": "^4.17.21",
     "postcss": "^8.4.14",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-error-boundary": "^3.1.4",
+    "react-i18next": "^11.16.9",
     "regenerator-runtime": "0.13.7",
     "tailwindcss": "^3.0.24",
     "tslib": "^2.3.0"
