--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "fontello:install": "npx fontello-cli --config ./fontello.config.json --css ./apps/client/src/fontello/css --font ./apps/client/src/fontello/font install",
     "fontello:open": "npx fontello-cli --config ./fontello.config.json open",
-    "start": "nx serve",
+    "start": "doppler run --project client --config dev -- nx serve",
     "storybook": "nx run common-components:storybook",
-    "build": "nx build",
+    "build": "doppler run --project client --config prod -- nx build",
     "test": "nx test",
     "prettier:check": "npx prettier --check .",
     "eslint": "npx eslint",
@@ -26,6 +26,7 @@
     "lodash": "^4.17.21",
     "postcss": "^8.4.14",
     "react": "18.1.0",
+    "react-country-flag": "^3.0.2",
     "react-dom": "18.1.0",
     "react-error-boundary": "^3.1.4",
     "react-i18next": "^11.16.9",
