--- a/apps/client/project.json
+++ b/apps/client/project.json
@@ -18,7 +18,7 @@
         "assets": ["apps/client/src/favicon.ico", "apps/client/src/assets"],
         "styles": ["apps/client/src/styles.scss"],
         "scripts": [],
-        "webpackConfig": "@nrwl/react/plugins/webpack"
+        "webpackConfig": "apps/client/custom-webpack.config.js"
       },
       "configurations": {
         "development": {
