--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "scripts": {
     "fontello:install": "npx fontello-cli --config ./fontello.config.json --css ./apps/client/src/fontello/css --font ./apps/client/src/fontello/font install",
     "fontello:open": "npx fontello-cli --config ./fontello.config.json open",
-    "start": "doppler run --project client --config dev -- nx serve",
+    "start": "npx concurrently --names \"CLIENT,API\" -c \"bgBlue.bold,bgMagenta.bold\" \"doppler run --project client --config dev -- npm run start:client\" \"doppler run --project api --config dev -- npm run start:api\"",
+    "start:client": "npx nx run client:serve",
+    "start:api": "npx nx run api:serve",
     "storybook": "nx run common-components:storybook",
-    "build": "doppler run --project client --config prod -- nx build",
+    "build": "npx nx build",
+    "heroku-postbuild": "npx nx build $PROJECT_NAME --prod",
     "test": "nx test",
     "prettier:check": "npx prettier --check .",
     "eslint": "npx eslint",
@@ -83,6 +86,7 @@
     "ts-node": "9.1.1",
     "typescript": "~4.6.2",
     "url-loader": "^3.0.0",
-    "webpack-bundle-analyzer": "^4.5.0"
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-merge": "^5.8.0"
   }
 }
