--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "classnames": "^2.3.1",
     "core-js": "^3.6.5",
     "express": "4.17.2",
+    "http-server": "^14.1.0",
     "i18next": "^21.8.4",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
