--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
     "lodash": "^4.17.21",
+    "logrocket": "^3.0.0",
     "postcss": "^8.4.14",
     "react": "18.1.0",
     "react-country-flag": "^3.0.2",
