--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.10.1",
     "@headlessui/react": "^1.6.3",
+    "@reduxjs/toolkit": "^1.8.2",
     "autoprefixer": "^10.4.7",
     "classnames": "^2.3.1",
     "core-js": "^3.6.5",
@@ -35,6 +37,7 @@
     "react-dom": "18.1.0",
     "react-error-boundary": "^3.1.4",
     "react-i18next": "^11.16.9",
+    "react-redux": "^8.0.2",
     "regenerator-runtime": "0.13.7",
     "tailwindcss": "^3.0.24",
     "tslib": "^2.3.0"
