--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@headlessui/react": "^1.6.3",
     "@reduxjs/toolkit": "^1.8.2",
     "autoprefixer": "^10.4.7",
+    "babel-plugin-add-react-displayname": "^0.0.5",
     "classnames": "^2.3.1",
     "core-js": "^3.6.5",
     "express": "4.17.2",
@@ -31,6 +32,7 @@
     "i18next-http-backend": "^1.4.1",
     "lodash": "^4.17.21",
     "logrocket": "^3.0.0",
+    "logrocket-react": "^5.0.1",
     "postcss": "^8.4.14",
     "react": "18.1.0",
     "react-country-flag": "^3.0.2",
@@ -67,6 +69,7 @@
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/lodash-es": "^4.17.6",
+    "@types/logrocket-react": "^3.0.0",
     "@types/node": "16.11.7",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
