--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^1.10.1",
     "@headlessui/react": "^1.6.3",
-    "@reduxjs/toolkit": "^1.8.2",
+    "@reduxjs/toolkit": "1.8.2",
     "autoprefixer": "^10.4.7",
     "babel-plugin-add-react-displayname": "^0.0.5",
     "classnames": "^2.3.1",
@@ -39,7 +39,7 @@
     "react-dom": "18.1.0",
     "react-error-boundary": "^3.1.4",
     "react-i18next": "^11.16.9",
-    "react-redux": "^8.0.2",
+    "react-redux": "8.0.2",
     "regenerator-runtime": "0.13.7",
     "tailwindcss": "^3.0.24",
     "tslib": "^2.3.0"
@@ -47,52 +47,52 @@
   "devDependencies": {
     "@babel/core": "7.12.13",
     "@babel/preset-typescript": "7.12.13",
-    "@nrwl/cli": "14.1.9",
-    "@nrwl/cypress": "14.1.9",
-    "@nrwl/eslint-plugin-nx": "14.1.9",
-    "@nrwl/express": "^14.1.9",
-    "@nrwl/jest": "14.1.9",
-    "@nrwl/linter": "14.1.9",
-    "@nrwl/node": "14.1.9",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "14.1.9",
-    "@nrwl/storybook": "^14.1.9",
-    "@nrwl/web": "14.1.9",
-    "@nrwl/workspace": "14.1.9",
-    "@storybook/addon-essentials": "~6.5.6",
-    "@storybook/builder-webpack5": "~6.5.6",
-    "@storybook/core-server": "~6.5.6",
-    "@storybook/manager-webpack5": "~6.5.6",
-    "@storybook/react": "~6.5.6",
+    "@nrwl/cli": "14.3.1",
+    "@nrwl/cypress": "14.3.1",
+    "@nrwl/eslint-plugin-nx": "14.3.1",
+    "@nrwl/express": "14.3.1",
+    "@nrwl/jest": "14.3.1",
+    "@nrwl/linter": "14.3.1",
+    "@nrwl/node": "14.3.1",
+    "@nrwl/nx-cloud": "14.1.0",
+    "@nrwl/react": "14.3.1",
+    "@nrwl/storybook": "14.3.1",
+    "@nrwl/web": "14.3.1",
+    "@nrwl/workspace": "14.3.1",
+    "@storybook/addon-essentials": "6.5.9",
+    "@storybook/builder-webpack5": "6.5.9",
+    "@storybook/core-server": "6.5.9",
+    "@storybook/manager-webpack5": "6.5.9",
+    "@storybook/react": "6.5.9",
     "@svgr/webpack": "^5.4.0",
-    "@testing-library/react": "13.1.1",
+    "@testing-library/react": "13.3.0",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
     "@types/lodash-es": "^4.17.6",
     "@types/logrocket-react": "^3.0.0",
-    "@types/node": "16.11.7",
-    "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.3",
-    "@typescript-eslint/eslint-plugin": "~5.18.0",
-    "@typescript-eslint/parser": "~5.18.0",
+    "@types/node": "17.0.41",
+    "@types/react": "18.0.12",
+    "@types/react-dom": "18.0.5",
+    "@typescript-eslint/eslint-plugin": "5.24.0",
+    "@typescript-eslint/parser": "5.24.0",
     "babel-jest": "27.5.1",
     "babel-loader": "8.1.0",
     "cypress": "^9.1.0",
-    "eslint": "~8.12.0",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react": "7.30.0",
     "eslint-plugin-react-hooks": "4.5.0",
     "husky": "^8.0.0",
     "jest": "27.5.1",
-    "nx": "14.1.9",
-    "prettier": "^2.5.1",
+    "nx": "14.3.1",
+    "prettier": "2.6.2",
     "react-test-renderer": "18.1.0",
     "ts-jest": "27.1.4",
-    "ts-node": "9.1.1",
-    "typescript": "~4.6.2",
+    "ts-node": "10.8.1",
+    "typescript": "4.7.3",
     "url-loader": "^3.0.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-merge": "^5.8.0"
