Add build config for Storybook

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start": "npx concurrently --names \"CLIENT,API\" -c \"bgBlue.bold,bgMagenta.bold\" \"doppler run --project client --config dev -- npm run start:client\" \"doppler run --project api --config dev -- npm run start:api\"",
     "start:client": "npx nx run client:serve",
     "start:api": "npx nx run api:serve",
-    "storybook": "nx run common-components:storybook",
-    "build": "npx nx build",
+    "storybook": "doppler run --project cc-storybook --config dev -- nx run common-components:storybook",
+    "build": "npx concurrently --names \"APPS,STORYBOOK\" -c \"bgBlue.bold,bgMagenta.bold\" \"npx nx build\" \"nx build-storybook common-components\"",
     "heroku-postbuild": "npx nx build $PROJECT_NAME --prod",
     "test": "nx test",
     "prettier:check": "npx prettier --check .",
