Add mobile menu for smaller screens

--- a/fontello.config.json
+++ b/fontello.config.json
@@ -103,6 +103,62 @@
       "search": [
         "spinner-solid"
       ]
+    },
+    {
+      "uid": "6adb668b7ae2e6c716dd79f948dd9a8f",
+      "css": "bars-solid",
+      "code": 59399,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M0 187.5C0 153 28 125 62.5 125H812.5C847.1 125 875 153 875 187.5 875 222.1 847.1 250 812.5 250H62.5C28 250 0 222.1 0 187.5ZM0 500C0 465.4 28 437.5 62.5 437.5H812.5C847.1 437.5 875 465.4 875 500 875 534.6 847.1 562.5 812.5 562.5H62.5C28 562.5 0 534.6 0 500ZM812.5 875H62.5C28 875 0 847.1 0 812.5 0 777.9 28 750 62.5 750H812.5C847.1 750 875 777.9 875 812.5 875 847.1 847.1 875 812.5 875Z",
+        "width": 875
+      },
+      "search": [
+        "bars-solid"
+      ]
+    },
+    {
+      "uid": "470549880962768cb43d956b7af9909a",
+      "css": "chevron-up-solid",
+      "code": 59400,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M812.5 687.5C796.5 687.5 780.5 681.4 768.3 669.2L437.5 338.5 106.6 669.3C82.2 693.8 42.7 693.8 18.3 669.3S-6.2 605.4 18.3 581L393.3 206C417.7 181.5 457.2 181.5 481.6 206L856.6 581C881.1 605.4 881.1 644.9 856.6 669.3 844.5 681.4 828.5 687.5 812.5 687.5Z",
+        "width": 875
+      },
+      "search": [
+        "chevron-up-solid"
+      ]
+    },
+    {
+      "uid": "7575b0266a52d9a239df21e98f0dc87f",
+      "css": "chevron-right-solid",
+      "code": 59401,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M187.5 937.5C171.5 937.5 155.5 931.4 143.3 919.2 118.9 894.8 118.9 855.2 143.3 830.8L474.2 500 143.3 169.2C118.9 144.8 118.9 105.2 143.3 80.8S207.3 56.4 231.7 80.8L606.7 455.8C631.1 480.2 631.1 519.8 606.7 544.2L231.7 919.2C219.5 931.4 203.5 937.5 187.5 937.5Z",
+        "width": 625
+      },
+      "search": [
+        "chevron-right-solid"
+      ]
+    },
+    {
+      "uid": "455a1fcd846eee1f156b42feb833b46e",
+      "css": "chevron-left-solid",
+      "code": 59402,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M437.5 937.5C421.5 937.5 405.5 931.4 393.3 919.2L18.3 544.2C-6.1 519.8-6.1 480.2 18.3 455.8L393.3 80.8C417.7 56.4 457.3 56.4 481.7 80.8S506.1 144.8 481.7 169.2L150.9 500 481.7 830.9C506.2 855.3 506.2 894.8 481.7 919.2 469.5 931.4 453.5 937.5 437.5 937.5Z",
+        "width": 625
+      },
+      "search": [
+        "chevron-left-solid"
+      ]
     }
   ]
 }
