Build clock using greensock

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "npm:install": "npm install",
+    "svg-components:generate": "npx @svgr/cli --out-dir ./libs/common-components/src/assets/svg-components --ignore-existing --filename-case kebab ./libs/common-components/src/assets/svgs",
     "fontello:install": "rm -rf .fontello-session && npx concurrently --names \"CLIENT,COMMON-COMPONENTS\" -c \"bgBlue.bold,bgMagenta.bold\" \"npm run fontello:install-client\" \"npm run fontello:install-common-components\" ",
     "fontello:install-client": "npx fontello-cli --config ./fontello.config.json --css ./apps/client/src/fontello/css --font ./apps/client/src/fontello/font install",
     "fontello:install-common-components": "npx fontello-cli --config ./fontello.config.json --css ./libs/common-components/src/fontello/css --font ./libs/common-components/src/fontello/font install",
@@ -29,6 +31,7 @@
     "classnames": "^2.3.1",
     "core-js": "^3.6.5",
     "express": "4.17.2",
+    "gsap": "npm:@gsap/shockingly@^3.10.4",
     "http-server": "^14.1.0",
     "i18next": "^21.8.4",
     "i18next-browser-languagedetector": "^6.1.4",
@@ -68,9 +71,11 @@
     "@storybook/core-server": "6.5.9",
     "@storybook/manager-webpack5": "6.5.9",
     "@storybook/react": "6.5.9",
-    "@svgr/webpack": "^5.4.0",
+    "@svgr/cli": "^6.2.1",
+    "@svgr/webpack": "^6.2.1",
     "@testing-library/react": "13.3.0",
     "@types/express": "4.17.13",
+    "@types/gsap": "^3.0.0",
     "@types/jest": "27.4.1",
     "@types/lodash-es": "^4.17.6",
     "@types/logrocket-react": "^3.0.0",
